--- a/.github/workflows/helper-validate-pr-title.yaml
+++ b/.github/workflows/helper-validate-pr-title.yaml
@@ -28,5 +28,5 @@ jobs:
       - name: Enforce Jira Issue Key in Pull Request Title
         uses: ryanvade/enforce-pr-title-style-action@v2.1.1
         with:
-          projectKey: ${{ JIRA_PROJECT_NAME }}
+          projectKey: ${{ env.JIRA_PROJECT_NAME }}
           keyAnywhereInTitle: 'true'
