KYAN-261 Run action on edit PR title

--- a/.github/workflows/helper-validate-pr-title.yaml
+++ b/.github/workflows/helper-validate-pr-title.yaml
@@ -16,6 +16,10 @@ name: 'Helper: Validate PR title'
 
 on:
   pull_request:
+    types:
+      - opened
+      - edited
+      - reopened
 
 env:
   JIRA_PROJECT_NAME: ${{ vars.ATLASSIAN_CLOUD_JIRA_PROJECT_NAME }}
