KYAN-261 Run action on edit PR title

--- a/.github/workflows/helper-validate-pr-title.yaml
+++ b/.github/workflows/helper-validate-pr-title.yaml
@@ -20,6 +20,7 @@ on:
       - opened
       - edited
       - reopened
+      - synchronize
 
 env:
   JIRA_PROJECT_NAME: ${{ vars.ATLASSIAN_CLOUD_JIRA_PROJECT_NAME }}
