--- a/applications/common/frontend/package.json
+++ b/applications/common/frontend/package.json
@@ -65,6 +65,7 @@
     "webpack": "^5.86.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.6.0",
+    "webpack-manifest-plugin": "^5.0.0",
     "webpack-merge": "^5.9.0",
     "websight-localsync": "^2.0.0"
   },
